# voica

./: README.md  main.py  pyproject.toml
src/: gui.py  record_audio.py  recorder.py  transcription.py
